[package]
name = "ems"
version = "0.1.0"
authors = ["ivan770 <leshenko.ivan770@gmail.com>"]
edition = "2018"

[profile.release]
lto = true

[features]
default = ["gcs", "gctts"]

# Add support for Google Cloud Speech recognition service
gcs = ["tonic", "prost", "prost-types", "yup-oauth2", "tokio-stream"]

# Add support for Google Text-to-Speech service
gctts = ["tonic", "prost", "prost-types", "yup-oauth2", "async-stream"]

# Enable jemalloc as default allocator
jemalloc = ["jemallocator"]

[dependencies]
anyhow = "1"
argh = "0.1"
audiosocket = "1"
base64 = "0.13"
dashmap = "4"
deadqueue = "0.2"
flume = "0.10"
futures-util = { version = "0.3", features = ["sink"] }
once_cell = "1"
pin-project = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "io-util", "time", "signal"] }
tokio-tungstenite = "0.14"
toml = "0.5"
tracing = { version = "0.1", features = ["attributes"] }
tracing-futures = "0.2"
tracing-subscriber = "0.2"
uuid = { version = "0.8", features = ["serde"] }

# GCTTS dependencies
async-stream = { version = "0.3", optional = true }

# GCS dependencies
tokio-stream = { version = "0.1", optional = true }

# GCS and GCTTS dependencies
tonic = { version = "0.4", features = ["transport", "prost", "tls"], optional = true }
prost = { version = "0.7", optional = true }
prost-types = { version = "0.7", optional = true }
yup-oauth2 = { version = "5", optional = true }

# Jemalloc
jemallocator = { version = "0.3", optional = true }

[dev-dependencies]
expect-test = "1"
tracing-test = "0.1"